5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1807_2566.log
== SUBMITION (2019-06-12 00:42:06) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = 0

for i in range(0, len(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)

print(vcont)


-- EXECUTION TIME:
1.17777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 9, in <module>
    vcont[dia] = vcont[dia] + 1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 00:49:52) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] += vcont[0]
		
	elif vetFaltas[i] == 3:
		vcont[1] += vcont[1]
	
	elif vetFaltas[i] == 4:
		vcont[2] += vcont[2]
		
	elif vetFaltas[i] == 5:
		vcont[3] += vcont[3]
		
	elif vetFaltas[i] == 6:
		vcont[4] += vcont[4]
		
	else:
		vcont[5] += vcont[5]

for i in range(0, len(vcont)):
	vcont = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- EXECUTION TIME:
1.28976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 28, in <module>
    vcont = round(vcont[i] / len(vetFaltas) * 100,1)
IndexError: invalid index to scalar variable.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:50:06) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] += vcont[0]
		
	elif vetFaltas[i] == 3:
		vcont[1] += vcont[1]
	
	elif vetFaltas[i] == 4:
		vcont[2] += vcont[2]
		
	elif vetFaltas[i] == 5:
		vcont[3] += vcont[3]
		
	elif vetFaltas[i] == 6:
		vcont[4] += vcont[4]
		
	else:
		vcont[5] += vcont[5]

for i in range(0, len(vcont)):
	vcont = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 00:51:08) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] += vcont[0]
		
	elif vetFaltas[i] == 3:
		vcont[1] += vcont[1]
	
	elif vetFaltas[i] == 4:
		vcont[2] += vcont[2]
		
	elif vetFaltas[i] == 5:
		vcont[3] += vcont[3]
		
	elif vetFaltas[i] == 6:
		vcont[4] += vcont[4]
		
	else:
		vcont[5] += vcont[5]

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- EXECUTION TIME:
1.18431
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0. 0. 0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:51:08) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] += vcont[0]
		
	elif vetFaltas[i] == 3:
		vcont[1] += vcont[1]
	
	elif vetFaltas[i] == 4:
		vcont[2] += vcont[2]
		
	elif vetFaltas[i] == 5:
		vcont[3] += vcont[3]
		
	elif vetFaltas[i] == 6:
		vcont[4] += vcont[4]
		
	else:
		vcont[5] += vcont[5]

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 00:53:02) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- EXECUTION TIME:
1.07064
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:53:03) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 00:53:17) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
	
	
		
		
	
	


-- EXECUTION TIME:
1.12316
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 00:53:32) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.16805
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:20:21) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, len(vcont)):
	vcont[i] = round(vcont[i] / len(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.01446
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:53:18) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.19793
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:53:44) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:54:15) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in vetFaltas:
	
	if vetFaltas[i] == 2:
		vcont[0] = vcont[0] + 1
		
	elif vetFaltas[i] == 3:
		vcont[1] = vcont[1] + 1
	
	elif vetFaltas[i] == 4:
		vcont[2] = vcont[2] + 1
		
	elif vetFaltas[i] == 5:
		vcont[3] = vcont[3] + 1
		
	elif vetFaltas[i] == 6:
		vcont[4] = vcont[4] + 1
		
	else:
		vcont[5] = vcont[5] + 1

for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.17505
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Historico de faltas: [ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Historico de faltas: [ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:57:17) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	
-- ERROR:
File "XXXX", line 7
    for i in range(0,size(vetFaltas):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:59:14) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
prin(vcont)
	
-- EXECUTION TIME:
1.1895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 14, in <module>
    prin(vcont)
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:59:19) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
prin(vcont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:59:39) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
0.977235
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:59:40) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:59:52) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
0.834307
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:00:02) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:02:17) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:02:21) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
1.02678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 9, in <module>
    vcont = vcont[dia] + 1
IndexError: invalid index to scalar variable.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:02:55) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:03:44) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
1.1507
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Historico de faltas: [ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Historico de faltas: [15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:03:53) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:04:05) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
0.915506
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:04:15) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
1.04549
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Historico de faltas: [ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Historico de faltas: [15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:04:35) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
	
-- EXECUTION TIME:
1.27094
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Historico de faltas: [ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Historico de faltas: [15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:06:21) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.1915
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:06:30) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
	print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:06:42) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
	print(vcont)
-- EXECUTION TIME:
0.851175
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0  3  4  6]
[18  0  0  3  4  6]
[18  0  0  3  4  6]
[18  0  0 18  4  6]
[18  0  0 18 25  6]
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[4 2 4 5 5 8]
[4 8 4 5 5 8]
[ 4  8 16  5  5  8]
[ 4  8 16 20  5  8]
[ 4  8 16 20 20  8]
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  1  3  1  2  4]
[15  7  3  1  2  4]
[15  7 23  1  2  4]
[15  7 23  7  2  4]
[15  7 23  7 15  4]
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:06:46) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
	print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:07:03) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:08:34) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: "))).split(".")

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:09:17) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: "))).split('.')

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:09:18) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: "))).split('.')

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.23633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 3, in <module>
    vetFaltas = array(eval(input())).split('.')
AttributeError: 'numpy.ndarray' object has no attribute 'split'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:12) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: "))).split(' . ')

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:33) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont,end=".")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:11:22) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = (round(vcont[i] / size(vetFaltas) * 100,1)),end="."
	
print(vcont)
-- EXECUTION TIME:
0.582772
-- ERROR:
  File "/home/codebench/codes/1807/2566/main.py", line 12
    vcont[i] = (round(vcont[i] / size(vetFaltas) * 100,1)),end="."
               ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:24) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = (round(vcont[i] / size(vetFaltas) * 100,1)),end="."
	
print(vcont)
-- ERROR:
File "XXXX", line 12
    vcont[i] = (round(vcont[i] / size(vetFaltas) * 100,1)),end="."
              ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:35) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = ((round(vcont[i] / size(vetFaltas) * 100,1)),end=".")
	
print(vcont)
-- ERROR:
File "XXXX", line 12
    vcont[i] = ((round(vcont[i] / size(vetFaltas) * 100,1)),end=".")
                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:59) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = (round(vcont[i] / size(vetFaltas) * 100,1))
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:14:07) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100,1
	
print(round(vcont),1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:01) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100,1
	
print(round(vcont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:15:01) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100,1
	
print(round(vcont,1))
-- EXECUTION TIME:
1.10341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 12, in <module>
    vcont[i] = vcont[i] / size(vetFaltas) * 100,1
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:13) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100,1
	
print(round(vcont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:30) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:15:30) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,1))
-- EXECUTION TIME:
1.06175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 14, in <module>
    print(round(vcont,1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:16:12) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:16:43) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont),3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:17:03) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:17:37) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:17:56) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6,dtype=int)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:18:43) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:18:45) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = vcont[i] / size(vetFaltas) * 100
	
print(round(vcont,3))
-- EXECUTION TIME:
1.03336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 14, in <module>
    print(round(vcont,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:19:25) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:19:27) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.2813
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Historico de faltas: [15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:19:39) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
1.23253
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:04:15) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores"))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- EXECUTION TIME:
0.676001
-- ERROR:
  File "/home/codebench/codes/1807/2566/main.py", line 10
    vcont = zeros(6, dtype=int)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:04:18) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores"))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
File "XXXX", line 10
    vcont = zeros(6, dtype=int)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:04:35) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:30) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:32) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	else i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 1)
print(vcont)
-- ERROR:
File "XXXX", line 22
    else i == 7:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:42) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:58) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)

for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
		
for i in range(0, size(vcont)):
	vcont[i] = (round(vcont[i] / size(v1) * 100, 1))
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)

for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
		
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:08:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("valores")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)

for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
		
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100,1)
print(vcont)
-- EXECUTION TIME:
0.693344
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
valores[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:20:31) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
0.782845
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
